# scrapy-plyvel

./: .gitignore  README.rst  pyproject.toml
scrapy_plyvel/: httpcache.py
tests/: test_scrapy_plyvel.py
