[tool.poetry]
name = "scrapy-plyvel"
version = "0.1.1"
description = "Scrapy cache storage using plyvel"
authors = ["Ratson <github@ratson.name>"]
license = "MIT"
classifiers = [
    'Framework :: Scrapy',
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Plugins',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
repository = "https://github.com/ratson/scrapy-plyvel"

[tool.poetry.dependencies]
python = "^3.7"
plyvel = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
